# pcb-sim-toolkit

./: .gitignore  README.md  pcb_sim_toolkit.spec  pyproject.toml  run_gui.py  run_magnetics_demo.py
configs/: default.yaml
examples/differential_pair/: design.yaml
examples/ipc2581_test/: test_board.cvg
examples/simple_led/: design.yaml
scripts/: create_icon.py
src/: resource_path.py
src/analysis/: magnetics.py  signal_integrity.py  spice.py  thermal.py
src/core/: cli.py  config.py  models.py  simulator.py
src/exporters/: magnetics_plots.py  report.py
src/gui/: app.py
src/parsers/: ipc2581_loader.py  kicad_loader.py  yaml_loader.py
tests/: test_simulation.py
